# irlib

./: .gitignore  DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  Microsoft CEO Satya Nadella argues that an organization's true competitive advantage (moat) in the AI era is no longer t.md  README.md  pyproject.toml  setup.py
benchmarks/: benchmark.py  benchmark_moat.py  benchmark_runner.py  judiciary_bench.py  quality.py  regression_dashboard.py  smoke_test.py
benchmarks/datasets/: registry.json
benchmarks/results/: README.md  scifact_sample.json
notebooks/: 01_Retrieval_Baselines.ipynb  02_Learning_Loop_Moat.ipynb  03_Attribution_Transparency.ipynb  04_Scalability_Benchmarking.ipynb  README.md
src/irlib/: __init__.py  benchmark.py  cache.py  calibration.py  dense.py  ingestion.py
src/irlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/irlib/advanced/: explainer.py
src/irlib/training/: bayes.py  finetuner.py  loop.py
tests/: test_benchmark.py  test_calibration.py  test_pipeline.py  test_retrieval.py  test_slow.py  test_verification.py
