[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irlib"
version = "0.3.0"
description = "Advanced information retrieval library with async, caching, streaming, hybrid search, and RAG benchmarks"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Swaroop Kallakuri", email = "ksjpswaroop@gmail.com"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "sentence-transformers>=2.2",
    "transformers>=4.40",
    "torch>=2.2",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6.23",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.0",
    "hnswlib>=0.8",
    "faiss-cpu>=1.8",
    "lightgbm>=4.0",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
    "reportlab>=4.0",
    "datasets>=2.18",
    "pytest>=7.0",
]

[project.optional-dependencies]
dense = ["sentence-transformers>=2.2"]
rerank = ["sentence-transformers>=2.2"]
llm = ["openai>=1.0"]
dev = ["pytest>=7.0", "httpx>=0.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "slow: tests that may download models or exercise native ANN backends",
    "benchmark: tests that may download benchmark datasets or run benchmark evaluations",
]
