[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irlib"
version = "0.3.0"
description = "Advanced information retrieval library"
readme = "README.md"
license = "MIT"
authors = [{name = "Swaroop Kallakuri", email = "ksjpswaroop@gmail.com"}]

[tool.setuptools.packages.find]
where = ["src"]
